--- 3.0.49 2009/10/01

Make a number of functions defined in xmlquery.c static. These have
never been declared in a public header file (yaz/xmlquery.h) and was
made public by mistake.

Improve speed of character conversions (iconv utilities). This makes
conversions from MARC-8 faster.

ZOOM_record_get returns 0 pointer if a MARC record can not be decoded -
unless type desired is "raw". This will prevent type "xml" from
returning ISO2709 .. Which obviously can not be XML parsed.

Fix memory leak in ZOOM that would occur if option apdulog was used
on a re-used connection.

Frontend server logs HTTP requests.

Frontend server now sends Z39.50 close when it times out (sesssion has
been idle for too long). Versions 2.0.30 and earlier also sent close.
But due to a mistake this was disabled in all versions after that, i.e.
the server would just close the socket immediately.

yaz-client emits a better message when receiving an unrecognised
userInformationField.

Skip zero-length subfields when decoding ISO2709. This rare case happens
if a record has two FS characters in a sequence. Without this patch
there would be a reference beyond char array in using_code_len fragments
in marcdisp.c.

Fix yaz-marcdump error that would occur if option -n was used (bug #3028).

--- 3.0.48 2009/08/28

The show command offered by the zoomsh command now takes a 3d optional
parameter type which is what is passed to ZOOM_record. If the type
argument is omitted, "render" is used.

RPN to CQL conv may use USE string attributes (bug #2978).

MarcXchange NS is now info:lc/xmlns/marcxchange-v1 .

--- 3.0.47 2009/07/08

Function yaz_xml2query allows a diagnostic element in the PQF XML
representation .. diagnostic@code and diagnostic@addinfo is diagnostic
code and additional info respectively.

The BER BOOLEAN is now the integral type Odr_bool which still happens
to be an 'int'. The BER INTEGER which used to be a plain 'int' is now
typedef'd to Odr_int. This is still an integral 'int', but it may be